create popup and divide buttons

--- a/dialog.html
+++ b/dialog.html
@@ -6,8 +6,8 @@
         <h1>Options</h1>
     </div>
     <div data-role="content">
-        <a data-rel="back" data-theme="a" data-role="button" data-icon="delete" data-iconpos="right" onClick="del_person(this);">Delete</a>
-        <a data-rel="back" data-theme="a" data-role="button" data-icon="back"   data-iconpos="right">Cancel</a>
+            <a data-rel="back" data-theme="a" data-role="button" data-icon="delete" data-iconpos="right" onClick="del_person();">Delete</a>
+            <a data-rel="back" data-theme="a" data-role="button" data-icon="back"   data-iconpos="right">Cancel</a>
     </div>
 </div>
 </body>
