--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
 
     <div class="content" style="margin:3px;">
         <ul id="person_list" data-role="listview" data-filter="true" data-filter-placeholder="Search person..." data-inset="true">
+
         </ul>
+    </div>
+
+    <div data-role="popup" id="myPopup" class="ui-content">
+        <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
+        <h3></h3>
+        <h4></h4>
     </div>
 
     <div data-role="footer" data-position="fixed" data-theme="b">
