create home pone field and json format

--- a/add_person.html
+++ b/add_person.html
@@ -9,8 +9,12 @@
         <div data-role="fieldcontain">
             <label for="input_name">name:</label>
             <input type="text" id="input_name" value="" placeholder="Enter name here..."/>
-            <label for="input_phone">phone:</label>
-            <input type="text" id="input_phone" value="" placeholder="Enter phone here..."/>
+
+            <label for="input_mobile">mobile:</label>
+            <input type="text" id="input_mobile" value="" placeholder="Enter mobile here..."/>
+
+            <label for="input_home_phone">home phone:</label>
+            <input type="text" id="input_home_phone" value="" placeholder="Enter home phone here..."/>
         </div>
         <a data-rel="back" data-role="button" data-theme="a" data-icon="plus" data-iconpos="right" onClick="save_person();">Create</a>
         <a data-rel="back" data-role="button" data-theme="a" data-icon="back" data-iconpos="right">Cancel</a>
